Thu Dec 16 11:06:50 2010  Arnold D. Robbins  <arnold@skeeve.com>

	Put strftime() default format into PROCINFO["strftime"].

	* awk.h (def_strftime_format): Declare const char[] array.
	* main.c (def_strftime_format): Define it.
	(load_procinfo): Load it into PROCINFO.
	* builtin.c (do_strftime): Use value in PROCINFO for format
	string if it's there. Remove old def_format static array.

Mon Dec 13 17:12:44 2010  Arnold D. Robbins  <arnold@skeeve.com>

	If not POSIX, turn [d-h] into [defgh].

	* re.c (check_bracket_exp): Make warning about ranges under
	lint control.
	(expand_range): New routine to expand ranges.
	(make_regexp): Check if might have range and call expand_range.
	(add_char): New helper function for expand_range.

Thu Dec  9 22:12:48 2010  Arnold D. Robbins  <arnold@skeeve.com>

	* io.c: Restored changes of 1 July 2010 to allow /inet4 and /inet6;
	they got lost amongst the merges. Fixed checking of do_sandbox.
	Also, removed the option for raw IP sockets since it was never
	implemented and wasn't going to be.

Tue Dec  7 11:59:00 2010  Arnold D. Robbins  <arnold@skeeve.com>

	* configure.ac: Remove test for return type of sprintf. Another
	renegade from the late 1980's bites the dust!
	* protos.h (sprintf): Remove declaration.

Sun Dec  5 15:01:35 2010  Arnold D. Robbins  <arnold@skeeve.com>

	* eval.c (grow_stack): Change env var to GAWK_STACKSIZE.
	* awk.h, main.c, eval.c, profile.c: Removed features added
	for those who are Strong In The Ways of the Source.
	* debug.c (comp_func): Moved to here from eval.c, where it's
	no longer needed.

Sat Dec  4 21:44:38 2010  Arnold D. Robbins  <arnold@skeeve.com>

	* node.c (init_btowc_cache): New function.
	(btowc_cache): New array.
	(str2wstr): Use is_valid_character in test instead of several isXXX
	calls.
	* awk.h [is_valid_character]: Macro to use btowc_cache.
	* main.c (main): Call init_btowc_cache().
	* io.c (rs1scan): Add call to is_valid_character when processing
	characters byte by byte.
