@@ -79,13 +79,7 @@ Please port the following code to your weird host;
 AWKNUM
 Floor(AWKNUM n)
 {
-	return floor(n
-#if 0
-#ifdef _CRAY
-		* (1.0 + DBL_EPSILON)
-#endif
-#endif
-	);
+	return floor(n);
 }
 
 /* Ceil --- do ceil(), also for Cray */
@@ -93,13 +87,7 @@ Floor(AWKNUM n)
 AWKNUM
 Ceil(AWKNUM n)
 {
-	return ceil(n
-#if 0
-#ifdef _CRAY
-		* (1.0 + DBL_EPSILON)
-#endif
-#endif
-	);
+	return ceil(n);
 }
 
 #ifdef HAVE_UINTMAX_T
