@@ -83,6 +83,7 @@ Changes from 3.1.8 to 4.0.0
 	- Atari
 	- Amiga
 	- BeOS
+	- Cray
 	- Tandem (non-POSIX)
 	- MS-DOS with Microsoft Compiler
 	- MS-Windows with Microsoft Compiler
