@@ -1,3 +1,8 @@
+Sat Dec 18 19:56:17 2010  Arnold D. Robbins  <arnold@skeeve.com>
+
+	* builtin.c, eval.c, floatcomp.c, io.c: Remove all the crufty
+	old code for #ifdef CRAY.
+
 Thu Dec 16 11:06:50 2010  Arnold D. Robbins  <arnold@skeeve.com>
 
 	Put strftime() default format into PROCINFO["strftime"].
